--- a/BibleEditor/Pages/CreateYoutubeVideoDescriptionPage.xaml
+++ b/BibleEditor/Pages/CreateYoutubeVideoDescriptionPage.xaml
@@ -4,9 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BibleEditor.Pages"
-             mc:Ignorable="d" 
+             mc:Ignorable="d" Loaded="UserControl_Loaded"
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="White" Height="Auto" Margin="10">
+    <Grid x:Name="main_grid" Background="White" Height="Auto" Margin="10" AllowDrop="True" Drop="main_grid_Drop">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
